<resources>
    <string name="preview_text">Simple API to retrieve the lyrics of a song. Just enter the names of artist and song to specific fields below </string>
    <string name="app_name">LyricsFinder</string>
    <string name="artist_name">Artist name:</string>
    <string name="song_name">Song name:</string>
    <string name="afterwords">powered by @lyrics.ovh</string>
    <string name="search">Search</string>

    <string name="label">Lyric Finder</string>
    <string name="fingerprint_message">Fingerprint Authentication</string>
    <string name="fingerprint_text">Place your finger on the Home button to verify your self</string>

    <!--Errors -->
    <string name="error_not_found">Found nothing</string>
    <string name="error_connection">Connection problems\nTry again later</string>
    <string name="error_empty_inputs">Invalid request params</string>
    <string name="error_default">Something goes wrong</string>
</resources>
