<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.gmail.laktionov.sample.rx.lyricsfinder.search.MainActivity">

    <TextView
        android:id="@+id/tv_preview_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|start"
        android:padding="@dimen/main_padding"
        android:text="@string/preview_text"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/main_text_height"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_artist_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="@dimen/main_padding"
        android:layout_marginTop="@dimen/main_small_padding"
        android:text="@string/artist_name"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/main_text_height"
        app:layout_constraintBottom_toBottomOf="@+id/et_artist_title"
        app:layout_constraintHorizontal_weight="3"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/et_artist_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_preview_title" />

    <EditText
        android:id="@+id/et_artist_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/main_padding"
        android:layout_marginStart="@dimen/main_small_padding"
        android:layout_marginTop="@dimen/main_small_padding"
        android:hint="@null"
        android:inputType="textAutoCorrect"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/main_text_height"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="7"
        app:layout_constraintLeft_toRightOf="@+id/tv_artist_title"
        app:layout_constraintTop_toBottomOf="@id/tv_preview_title" />

    <TextView
        android:id="@+id/tv_song_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="@dimen/main_padding"
        android:layout_marginTop="20dp"
        android:text="@string/song_name"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/main_text_height"
        app:layout_constraintBottom_toBottomOf="@+id/et_song_title"
        app:layout_constraintHorizontal_weight="3"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/et_song_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_artist_title" />

    <EditText
        android:id="@+id/et_song_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/main_padding"
        android:layout_marginStart="@dimen/main_small_padding"
        android:layout_marginTop="@dimen/main_small_padding"
        android:hint="@null"
        android:inputType="textAutoCorrect"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/main_text_height"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="7"
        app:layout_constraintLeft_toRightOf="@+id/tv_song_title"
        app:layout_constraintTop_toBottomOf="@id/et_artist_title" />

    <Button
        android:id="@+id/btn_search_lyric"
        style="@style/SearchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/main_padding"
        android:layout_marginTop="@dimen/main_small_padding"
        android:gravity="center"
        android:minHeight="@dimen/title_height"
        android:text="@string/search"
        android:textColor="@color/colorAccent"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_song_title" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="@dimen/main_padding"
        app:layout_constraintBottom_toTopOf="@id/tv_afterwords"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_default="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_search_lyric"
        app:layout_constraintWidth_default="spread">

        <TextView
            android:id="@+id/tv_song_lyric"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/main_padding"
            android:gravity="center"
            android:textColor="@color/colorAccent"
            android:textSize="14sp" />
    </ScrollView>


    <TextView
        android:id="@+id/tv_afterwords"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:gravity="center"
        android:minHeight="@dimen/bottom_view_height"
        android:text="@string/afterwords"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/main_text_height"
        app:layout_constraintBottom_toBottomOf="parent" />

</android.support.constraint.ConstraintLayout>
