<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/searchPreviewTitleTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|start"
        android:padding="@dimen/main_padding"
        android:text="@string/preview_text"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/main_text_height"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/searchArtistTv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/main_padding"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/artist_name"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/main_text_height"
        app:layout_constraintBottom_toBottomOf="@+id/searchArtistEt"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/searchArtistEt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/searchArtistEt"
        app:layout_constraintVertical_bias="0.615" />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/searchArtistEt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/main_small_padding"
        android:layout_marginTop="@dimen/main_small_padding"
        android:layout_marginEnd="@dimen/main_padding"
        android:hint="@null"
        android:inputType="textAutoCorrect"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/main_text_height"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/searchArtistTv"
        app:layout_constraintTop_toBottomOf="@id/searchPreviewTitleTv" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/searchSongTv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/main_padding"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/song_name"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/main_text_height"
        app:layout_constraintBottom_toBottomOf="@+id/searchSongEt"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/searchSongEt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/searchSongEt"
        app:layout_constraintVertical_bias="0.8" />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/searchSongEt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/main_small_padding"
        android:layout_marginTop="@dimen/main_small_padding"
        android:layout_marginEnd="@dimen/main_padding"
        android:hint="@null"
        android:inputType="textAutoCorrect"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/main_text_height"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/searchSongTv"
        app:layout_constraintTop_toBottomOf="@id/searchArtistEt" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/searchStartBtn"
        style="@style/SearchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/main_small_padding"
        android:layout_marginEnd="@dimen/main_padding"
        android:gravity="center"
        android:minHeight="@dimen/title_height"
        android:text="@string/search"
        android:textColor="@color/colorAccent"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchSongEt" />

    <ScrollView
        android:id="@+id/searchResultContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="@dimen/main_padding"
        android:animateLayoutChanges="true"
        android:overScrollMode="never"
        app:layout_constraintBottom_toTopOf="@id/searchAfterwords"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_default="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/searchStartBtn"
        app:layout_constraintWidth_default="spread">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/searchSongTextTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/main_padding"
            android:gravity="center"
            android:textColor="@color/colorAccent"
            android:textSize="14sp" />
    </ScrollView>

    <ProgressBar
        android:id="@+id/searchProgress"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/searchResultContainer"
        app:layout_constraintEnd_toEndOf="@+id/searchResultContainer"
        app:layout_constraintStart_toStartOf="@+id/searchResultContainer"
        app:layout_constraintTop_toTopOf="@+id/searchResultContainer" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/searchAfterwords"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:gravity="center"
        android:minHeight="@dimen/bottom_view_height"
        android:text="@string/afterwords"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/main_text_height"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>
